# robot_base

kinco_client/: CMakeLists.txt  package.xml
kinco_client/include/kinco_client/: DataStructures.h  DeviceManager.h
kinco_client/include/kinco_client/drivers/: DifferentialDrive.h  IMU.h  Interface.h  KincoMotor.h
kinco_client/include/kinco_client/motion/: Odometry.h  PID.h  RollingMeanAccumulator.h
kinco_client/src/: DeviceManager.cpp  mainWrapper.cpp
kinco_client/src/drivers/: DifferentialDrive.cpp  IMU.cpp  KincoMotor.cpp
